--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3673,6 +3673,9 @@
     <ClCompile Include="Baekjoon\97.Rank\1.Silver\10709.cpp">
       <Filter>Baekjoon\97.Rank\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\2.Greedy\2.Gold\1092.cpp">
+      <Filter>Baekjoon\2.Greedy\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
