--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3688,6 +3688,9 @@
     <ClCompile Include="Baekjoon\4.BFS\1.Silver\24445.cpp">
       <Filter>Baekjoon\4.BFS\1.Silver</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\5.BinarySearch\2.Gold\2632.cpp">
+      <Filter>Baekjoon\5.BinarySearch\2.Gold</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
