--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3721,6 +3721,7 @@
     <ClCompile Include="Baekjoon\0.DataStructure\3.Platinum\6549.cpp">
       <Filter>Baekjoon\0.DataStructure\3.Platinum</Filter>
     </ClCompile>
+    <ClCompile Include="Baekjoon\97.Rank\3.Platinum\1786.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
