--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -3725,6 +3725,7 @@
     <ClCompile Include="Baekjoon\0.DataStructure\3.Platinum\3015.cpp" />
     <ClCompile Include="Baekjoon\97.Rank\3.Platinum\2150.cpp" />
     <ClCompile Include="Baekjoon\97.Rank\2.Gold\15961.cpp" />
+    <ClCompile Include="Baekjoon\3.DFS\2.Gold\16973.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Baekjoon\97.Rank\0.Bronze\13277.py">
